--- a/src/css/loader.css
+++ b/src/css/loader.css
@@ -28,3 +28,25 @@
     transform: translateX(-99%);
   }
 }
+
+/* !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! */
+
+.loader-top {
+  width: 100%;
+  height: 4.8px;
+  display: none;
+  position: relative;
+  background: rgba(255, 255, 255, 0.15);
+  overflow: hidden;
+}
+.loader-top::after {
+  content: '';
+  width: 96px;
+  height: 4.8px;
+  background: #165cdf;
+  position: absolute;
+  top: 0;
+  left: 0;
+  box-sizing: border-box;
+  animation: hitZak 1s linear infinite alternate;
+}
