--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -8,9 +8,11 @@
   margin-top: 36px;
   margin-bottom: 32px;
 }
+
 .label {
   margin-right: 8px;
 }
+
 .input {
   border: 1px solid #808080;
   border-radius: 4px;
@@ -47,6 +49,7 @@
   letter-spacing: 0.04em;
   color: #2e2f42;
 }
+
 .button {
   font-family: 'Montserrat', sans-serif;
   font-weight: 500;
@@ -70,13 +73,12 @@
   height: 40px;
   display: block;
   margin: auto;
+  margin-top: 32px;
 }
 
 .button:hover {
   background: #6c8cff;
   border: #6c8cff;
-}
-.loader {
 }
 
 .list {
